Update to forge for 1.18.2
Re-indent with tabs
Update Gradle Wrapper